# agenda_uai_api

./: .env.example  Cargo.toml  docker-compose.yml  eslint.config.mts  package-lock.json  package.json
.github/workflows/: ci-db.yml
api/: Cargo.toml
api/src/: app_state.rs  main.rs
api/src/extract/: auth.rs  mod.rs  validated_json.rs
api/src/middlewares/: auth.rs
api/src/request/: users.rs
api/src/response/: mod.rs  response.rs  respose_macro.rs  users.rs
api/src/routes/: mod.rs  users.rs
bd/: Dockerfile
core_types/: Cargo.toml
core_types/src/: cpf.rs  email.rs  error_message.rs  lib.rs  name.rs  password.rs  phone_number.rs  status.rs  username.rs
db/init/: 00_create_db_and_user.sh  01_enable_extensions.sh
domain/: Cargo.toml
domain/src/user/: mod.rs
infra/: Cargo.toml
infra/src/: jwt.rs  lib.rs  password_hasher.rs
postgres_data/: postmaster.pid
postgres_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres_data/base/16384/: 1247  1249  1259  16387  16393  16394  16396  16397  16404  16405  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  (+8 more)
postgres_data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
prisma/: schema.prisma
scripts/: db_check.sh  deploy.sh
src/: server.ts
tests/sql/: 001_extensions.sql  010_rw_basic.sql  020_tx_and_uuid.sql
types/: Cargo.toml
types/src/: email.rs  lib.rs  name.rs  phone_number.rs  status.rs  string_utils.rs  type_error.rs
user/: Cargo.toml
user/src/: lib.rs  user.rs  user_dto.rs  user_service.rs
(+2 files in other folders)
