[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
domain = { path = "../domain" }
infra  = { path = "../infra" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
core_types = { path = "../core_types" }
async-trait = "0.1.89"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
thiserror = "2.0.15"
password-hash = { version = "0.5", features = ["std"] }
argon2 = { version = "0.5.3", features = ["std"] }
